--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="utf-8"/>
     <title>My First Parcel App</title>
+    <link rel="stylesheet" href="styles/styles.css" />
     <script type="module" src="index.js"></script>
 </head>
 <body>
 <h1>Hello, World!</h1>
+<div id="root"></div>
 </body>
 </html>
