--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,12 @@
 <!doctype html>
-<html lang="en">
-<head>
-    <meta charset="utf-8"/>
-    <title>My First Parcel App</title>
-    <link rel="stylesheet" href="styles/styles.css" />
-    <script type="module" src="index.js"></script>
-</head>
-<body>
-<h1>Hello, World!</h1>
-<div id="root"></div>
-</body>
+<html lang="ru">
+    <head>
+        <meta charset="utf-8"/>
+        <title>Title</title>
+        <link rel="stylesheet" href="styles/styles.css" />
+        <script type="module" src="index.js"></script>
+     </head>
+    <body>
+        <div id="root"></div>
+    </body>
 </html>
