--- a/src/index.html
+++ b/src/index.html
@@ -57,6 +57,13 @@
 
     </svg>
   </div>
+  <div id="links" class="fixed-right-top z10">
+    <button id="login" class="link">Авторизация</button>
+    <button id="register" class="link">Регистрация</button>
+    <button id="chat" class="link">Чаты</button>
+    <button id="profile" class="link">Профиль</button>
+    <button id="error" class="link">Ошибка клиента</button>
+  </div>
   <div id="root" class="row">
   </div>
 </body>
