решил проблему с креденшиалс

--- a/src/index.html
+++ b/src/index.html
@@ -63,6 +63,7 @@
     <button id="chat" class="link">Чаты</button>
     <button id="profile" class="link">Профиль</button>
     <button id="error" class="link">Ошибка клиента</button>
+    <button id="logout" class="link">Выход</button>
   </div>
   <div id="root" class="row">
   </div>
