переписал модалку на событийную схему

--- a/src/index.html
+++ b/src/index.html
@@ -58,15 +58,16 @@
     </svg>
   </div>
   <div id="links" class="fixed-right-top z10">
-    <button id="login" class="link">Авторизация</button>
-    <button id="register" class="link">Регистрация</button>
-    <button id="chat" class="link">Чаты</button>
-    <button id="profile" class="link">Профиль</button>
+    <button id="" class="link">Авторизация</button>
+    <button id="sign-up" class="link">Регистрация</button>
+    <button id="messenger" class="link">Чаты</button>
+    <button id="settings" class="link">Профиль</button>
     <button id="error" class="link">Ошибка клиента</button>
     <button id="logout" class="link">Выход</button>
   </div>
   <div id="root" class="row">
   </div>
+  <div id="modal"></div>
 </body>
 <script type="module" src="index.ts"></script>
 </html>
