--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,12 @@
             <rect x="8" y="13.2" width="11" height="1.6" fill="white"></rect>
             <path d="M15 9L19 14L15 19" stroke="white" stroke-width="1.6"></path>
         </symbol>
-    </svg>
+        <symbol id="dots" width="3" height="16" viewBox="0 0 3 16" xmlns="http://www.w3.org/2000/svg">
+            <circle cx="1.5" cy="2" r="1.5" fill="var(--accentColor)" />
+            <circle cx="1.5" cy="8" r="1.5" fill="var(--accentColor)" />
+            <circle cx="1.5" cy="14" r="1.5" fill="var(--accentColor)"/>
+        </symbol>
+    </symbol>
 </div>
 <div id="root" class="row">
 </div>
